--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "node_modules/powerbi-visuals-utils-dataviewutils/lib/index.d.ts",
     "node_modules/three/build/three.js",
 	  "typings/index.d.ts",
-    "src/visual.ts"
+    "src/visual.ts",
+    "src/constants.ts"
   ]
 }
